hard-gists/4632416/run.log
=== Docker Run Log for 4632416 ===
Started at: Mi 29. Okt 14:55:16 CET 2025

[2025-10-29 14:55:17] START: Running container for 4632416
[2025-10-29 14:55:17] SUCCESS: Container fe1bfe36c8dac5d02a292ba7202b8b623afcc6c196e40c73556143a32e570de8 started for 4632416
=== Container logs for 4632416 ===
  File "/snippet.py", line 51
    print usage
    ^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4632416 ===
[2025-10-29 14:55:19] INFO: Container fe1bfe36c8dac5d02a292ba7202b8b623afcc6c196e40c73556143a32e570de8 has stopped
